objects/Pricebook2.object
<CustomObject>
    <fields>
        <fullName>Default_Order_Pricebook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Order Pricebook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Cost__c</fullName>
        <label>Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variable_Cost_Per_Unit__c</fullName>
        <label>Variable Cost Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>All_Price_Books</fullName>
        <columns>PRICEBOOK2.NAME</columns>
        <columns>PRICEBOOK2.IS_ACTIVE</columns>
        <columns>PRICEBOOK2.DESCRIPTION</columns>
        <columns>PRICEBOOK2.VALIDFROM</columns>
        <columns>PRICEBOOK2.VALIDTO</columns>
        <columns>PRICEBOOK2.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Price Books</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>